--- a/windows/infodialog.ui
+++ b/windows/infodialog.ui
@@ -88,7 +88,7 @@
     </rect>
    </property>
    <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
+    <enum>QLineEdit::Normal</enum>
    </property>
    <property name="placeholderText">
     <string>请输入ID</string>
